fix #38 (Title and description alignments)

--- a/src/modules/cmb/core/cmb-core.styl
+++ b/src/modules/cmb/core/cmb-core.styl
@@ -209,7 +209,13 @@ a.accordion-toggle
     width 100%
     > div
         text-align left
+    > div:nth-child(2)
+        width 20%
+        padding-left 8px
+    > div:nth-child(3)
+        width 60%
     > div:last-child()
+        width 20%
         text-align right
 
 input:invalid
